# src/main/kotlin/bankapi/tutorial/springboot/ayparDeneme1/model/BankEntity.kt
@@ -5,7 +5,7 @@ import javax.persistence.*
 
 @Table(name="banks_table")
 @Entity
- class jpaBankEntity (
+ class BankEntity (
     @Id
     @Column( nullable = false)
     var accountNumber: String? = null,
